# parking_prediction

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  Dockerfile  README.md  fbprophet-requirements.txt  nginx.conf  pyproject.toml  pytest.ini  report.py  train.py
app/: __init__.py  auth_provider.py  constants.py  data_formats.py  hypercorn_config.py  keeper_of_the_state.py  model.py  now_adjusted.py  predictor.py  start.sh  train.config  train.sh  util.py
app/_models/: abstract_model.py  deep_hong.py  moving_average.py  prophets.py
app/fybr/: availability_provider.py  availability_tracker.py  zone_info.py
chart/: Chart.yaml  values.yaml
chart/templates/: deployment.yaml  ingress.yaml  rbac.yaml  service.yaml  train.yaml
notebooks/: 01. Evaluating the Performance of Parking Availability Models.ipynb  02. Feature Selection.ipynb  Visualizing Zone Clusters v1.ipynb
tests/: conftest.py  fake_vault.py  fake_websocket_server.py  test_app.py  test_auth_provider.py  test_data_formats.py  test_keeper_of_the_state.py  test_model.py  test_now_adjusted.py  test_predictor.py  util.py
tests/fybr/: test_availability_provider.py  test_availability_tracker.py  test_zone_info.py
